<resources>
    <string name="app_name">BAUSThub</string>
    <string name="smart_student_platform">Smart Student Platform</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_bausthub">Login to BAUSThub</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_register">Don\'t have an account? Register</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="already_account_login">Already have an account? Login</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="student_id">Student ID</string>
    <string name="department">Department</string>
    <string name="batch">Batch</string>
    <string name="save_profile">Save Profile</string>
    <string name="bausthub_dashboard">BAUSThub Dashboard</string>
    <string name="student_email">Student Email</string>
    <string name="notice_board">📢 Notice Board</string>
    <string name="class_routine">📚 Class Routine</string>
    <string name="result_section">📝 Result Section</string>
    <string name="student_profile">👤 Student Profile</string>
    <string name="logout">Logout</string>
    <string name="join_community">Join the BAUST community today</string>
    <string name="official_network">The Official University Social Network</string>
    <string name="full_name_label">Full Name</string>
    <string name="email_label">BAUST Email</string>
    <string name="password_label">Password</string>
    <string name="full_name_hint">Your Full Name</string>
    <string name="email_hint">name@baust.edu.bd</string>
    <string name="password_hint">minimum 6 digit</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="new_to_bausthub">New to BAUSThub? </string>
    <string name="create_account_link">Create an account</string>
    <string name="access_the_hub">Access The Hub</string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="baust_part">BAUST</string>
    <string name="hub_part">hub</string>
    <string name="user_dept_batch">%1$s | %2$s</string>
    <string name="go_to_profile">Go to profile</string>
</resources>